--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,16 +1,9 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@import 'variaveis.scss';
+
+*{
+  font-family: $fontRegular;
+  font-size: 14;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
+@import '../public/fonts/fonts.scss';
+@import '../componentes/botao/botao.scss';
